--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "test": "tap tst/*.js"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.1.18",
+    "gulp-babel": "^6.1.0",
     "tape": "^4.2.2"
   }
 }
