--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "test": "tap tst/*.js"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.1.18",
-    "gulp-babel": "^6.1.0",
+    "gulp": "^3.9.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
     "tape": "^4.2.2"
   }
 }
