--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "tape": "^4.2.2"
+  },
+  "dependencies": {
+    "lodash": "^4.1.0"
   }
 }
