--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "url": "https://github.com/andreasmcdermott/TurnBasedStrategyGame.git"
   },
   "scripts": {
+    "dev": "webpack-dev-server --inline --hot --no-info --port 3000 --host 0.0.0.0",
     "test": "tap tst/*.js"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.1",
+    "babel-core": "^6.1.2",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-runtime": "^6.1.2",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-runtime": "^6.0.14",
+    "css-loader": "^0.21.0",
+    "webpack": "^1.12.3",
+    "webpack-dev-server": "^1.12.1",
     "tape": "^4.2.2"
   },
   "dependencies": {
